# mifsa-gnss

./: CMakeLists.txt  README.md  config.h.in
c/: mifsa_gnss_c.pc.in
c/include/mifsa/gnss/: client_c.h
c/include/mifsa/gnss/types/: location_c.h
c/src/: client_c.cpp
client/include/mifsa/gnss/: client.h
client/src/: client.cpp
client/src/adapter/: client_interface_custom.hpp  client_interface_fdbus.hpp  client_interface_ros.hpp  client_interface_vsomeip.hpp
examples/: CMakeLists.txt  sample.cpp
examples/sample/: CMakeLists.txt  sample.cpp
examples/sample_c/: sample.c
idls/fdbus/: gnss.proto
idls/ros/: package.xml
idls/vsomeip/: gnss.fdepl  gnss.fidl
idls/vsomeip/etc/: vsomeip_mifsa_gnss_client.json  vsomeip_mifsa_gnss_server.json
include/mifsa/gnss/: client_interface.h  common_types.h  interface.h  platform.h  platform_interface.h  provider.h  server_interface.h  types.h
include/mifsa/gnss/types/: location.h
server/src/: server.cpp  server.h
server/src/adapter/: server_interface_custom.hpp  server_interface_fdbus.hpp  server_interface_ros.hpp  server_interface_vsomeip.hpp
